--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Comic Neue', cursive;
+  background-color: #F9EFC7;
+}
+.App h1{
+  text-align: center;
+}
+.pokemon-list{
+  text-align: center;
+}
+.pokemon-list .poke {
+  padding: 10px;
+}
+.paging {
+  text-align: center;
+}
+.paging button {
+  border-radius: 1rem;
+}
+.paging button:hover{
+  background-color: #A68811;
 }
