--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&display=swap");
 
 body {
-  font-family: 'Comic Neue', cursive;
-  background-color: #F9EFC7;
+  font-family: "Comic Neue", cursive;
+  background-color: #f9efc7;
 }
-.App h1{
+.App h1 {
   text-align: center;
 }
-.pokemon-list{
+.pokemon-list {
   text-align: center;
 }
 .pokemon-list .poke {
@@ -19,6 +19,6 @@ body {
 .paging button {
   border-radius: 1rem;
 }
-.paging button:hover{
-  background-color: #A68811;
+.paging button:hover {
+  background-color: #a68811;
 }
